# AI-Trader-Codex

./: .dockerignore  .env.docker.v2  .env.example  .gitignore  AUTHENTICATION_READY.md  AUTH_FLOW_FIXED.md  AUTH_IMPLEMENTATION_SUMMARY.md  BLOOMBERG_DASHBOARD_COMPLETE.md  CURRENT_SPRINT.md  DEPLOYMENT.md  DEVELOPMENT_PLAN.md  Dockerfile  FILES_SUMMARY.md  FIRST_SESSION.md  FRONTEND_IMPLEMENTATION_COMPLETE.md  FYERS_AUTH_GUIDE.md  FYERS_CLIENT_REFRESH_CHANGES.md  FYERS_OAUTH_SETUP.md  FYERS_STYLE_IMPLEMENTATION.md  FYERS_TOKEN_REFRESH_IMPLEMENTATION.md  HANDOFF_TO_CLAUDE_CODE.md  IMPLEMENTATION_COMPLETE.md  OAUTH_FLOW_COMPLETE.md  PERFORMANCE_OPTIMIZATION_COMPLETE.md  PORT_CONFIGURATION.md  PROJECT_BRIEF.md  QUICK_START.md  README.md  SERVICES_RUNNING.md  START_HERE.md  TESTING_CHECKLIST.md  TOKEN_REFRESH_COMPLETE.md  TOKEN_REFRESH_IMPLEMENTATION.md  TOKEN_REFRESH_SUMMARY.md  TROUBLESHOOTING.md  WATCHLIST_COMPLETE.md  WATCHLIST_IMPLEMENTATION.md  WATCHLIST_QUICK_START.md  deploy.sh  docker-compose.aws-single.yml  (+14 more)
.claude/: settings.local.json
docker/: docker-compose.yml
docker/init-db/: 01_schema.sql
docs/architecture/: subsecond-agent-roadmap.md
execution-core/: Cargo.toml  Dockerfile  README.md
execution-core/src/: main.rs
frontend/: .dockerignore  Dockerfile  FRONTEND_RUNNING.md  next.config.ts  package-lock.json  package.json
ios/: README.md
ios/NiftyAITraderMobile.xcodeproj/: project.pbxproj
scripts/: migrate_option_data_v2.sql  run_bootstrap_explorer_research.py  run_fno_swing_research.py  run_hourly_large_move_research.py  run_indicator_strategy_tuning.py  run_mover_frequency_charts.py  run_profile_interaction_research.py  run_swing_strategy_benchmark.py  run_us_swing_research.py  test_watchlist_data.py  train_ml_ensemble.py
scripts/aws/: deploy_ec2.sh  deploy_single_ec2.sh  env.aws.example  env.aws.single.example  provision_single_ec2.py
src/agent/: __init__.py  events.py  fractal_scan_notifier.py  telegram_notifier.py  trading_agent.py
src/analysis/: fractal_profile.py  fractal_scan.py  (+6 more)
tests/: conftest.py  test_data_pipeline.py  test_data_processors.py
(+361 files in other folders)
