[package]
name = "execution-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-nats = "0.37"
axum = "0.7"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43", features = ["macros", "rt-multi-thread", "signal", "sync", "net"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
